# triblespace-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INVENTORY.md  README.md  rust-toolchain.toml
const-blake3/: Cargo.toml  README.md
const-blake3/src/: lib.rs  proofs.rs
trible/: CHANGELOG.md  Cargo.toml  INVENTORY.md  README.md
trible/src/: main.rs
trible/src/cli/: branch.rs  team.rs  util.rs
trible/src/cli/pile/: blob.rs  branch.rs  diagnose.rs  index.rs  merge.rs  migrate.rs  mod.rs  net.rs  pin.rs  reid.rs  signing.rs  squash.rs
trible/tests/: basic.rs  branch_set_e2e.rs  consolidate_e2e.rs  pile.rs  pile_net_status_e2e.rs  reflog_e2e.rs  store.rs  team_e2e.rs
triblespace-core/: CHANGELOG.md  Cargo.toml
triblespace-core-macros/: Cargo.toml
triblespace-core-macros/src/: lib.rs
triblespace-core/benches/: hatch.rs  memory_absolute.rs  patch_bucket.rs  tribleset_vw_vs_patch.rs  union_vw_vs_patch.rs  vwpatch.rs  vwpatch_allorderings.rs  vwpatch_archivemem.rs  vwpatch_readsweep.rs  vwpatch_realmem.rs  vwpatch_setops.rs
triblespace-core/examples/: patch_amac_probe.rs  patch_frontier_order.rs
triblespace-core/src/: attribute.rs  blob.rs  clock.rs  debug.rs  examples.rs  hatch.rs  id.rs  inline.rs  lib.rs  metadata.rs  patch.rs  prelude.rs  query.rs  repo.rs  trible.rs  value.rs  value_formatter.rs  vwpatch.rs  wasm.rs
triblespace-core/src/blob/: cache.rs  encodings.rs  memoryblobstore.rs  schemas.rs
triblespace-core/src/export/: json.rs
triblespace-core/src/id/: rngid.rs  ufoid.rs
triblespace-core/src/import/: import_attribute.rs  json.rs  json_stream.rs  json_tree.rs  json_winnow.rs  mod.rs  ntriples.rs
triblespace-core/src/inline/: encodings.rs
triblespace-core/src/patch/: branch.rs  bytetable.rs  entry.rs  leaf.rs
triblespace-core/src/prelude/: blobencodings.rs  blobschemas.rs  inlineencodings.rs  inlineschemas.rs  valueschemas.rs
triblespace-core/src/query/: agglomerative.rs  constantconstraint.rs  equalityconstraint.rs  finiteunaryprogram.rs  hashmapconstraint.rs  hashsetconstraint.rs  ignore.rs  intersectionconstraint.rs  patchconstraint.rs  program.rs  proposal_layout_tests.rs  rangeconstraint.rs  receipt_factorial_probe.rs  regularpathconstraint.rs  residual.rs  sortedsliceconstraint.rs  unionconstraint.rs  variableset.rs
triblespace-core/src/repo/: async_store.rs  branch.rs  capability.rs  commit.rs  hybridstore.rs  index_home.rs  index_range.rs  lazy.rs  memoryrepo.rs  objectstore.rs  pile.rs  pile_index.rs  wanting.rs  yard.rs
triblespace-core/src/trible/: fragment.rs  spread.rs  tribleset.rs  vwtribleset.rs
triblespace-core/src/value/: encodings.rs  schemas.rs
triblespace-core/src/vwpatch/: branch.rs  bytetable.rs  entry.rs  leaf.rs  spike.rs
triblespace-core/tests/: attributes_macro.rs  custom_delta.rs  entity_auto_put.rs  entity_core_invariants.rs  frame_scheduler_model.rs  ignore_direct_source.rs  ignore_soundness.rs  json_export.rs  lazy_checkout.rs  ntriples_integration.rs  or_pattern.rs  page_local_confirms.rs  patch_batch_probe.rs  positive_support_packet_debt_oracle.rs  proptest_entity.rs  proptest_import_export.rs  proptest_patch.rs  proptest_query.rs  proptest_repo.rs  proptest_serialization.rs  proptest_tribleset.rs  residual_candidate_pages_regression.rs  residual_phase_probe.rs  residual_state.rs  rpq_delta.rs  rpq_producer_credit.rs  semantic_receipts.rs  succinct_direct_source.rs  succinct_repeated_direct_source.rs  succinct_repeated_variables.rs  union_soundness.proptest-regressions  union_soundness.rs  unionarchive_direct_source.rs  vwpatch_bulk_build.rs  vwpatch_span_determinism.rs  vwpatch_union_scale.rs  vwpatch_union_spike.rs  vwtribleset_find.rs  wanting_checkout.rs  workspace_commit_fragment.rs
triblespace-gpu/: Cargo.toml  README.md
triblespace-gpu/examples/: archive_merge.rs  cpu_runtime_probe.rs  frontier_program.rs  resident_eav_chain.rs  resident_eav_shapes.rs  resident_transition.rs  resident_value_page_2d.rs
triblespace-gpu/src/: budgeted.rs  cubecl_backend.rs  lib.rs  query_program.rs  resident_choice_capability_tests.rs  resident_fully_bound_tests.rs  resident_ordered_oracle.rs  resident_pair_distinct_tests.rs  resident_program.rs  resident_proposals.rs  resident_restricted_tests.rs  resident_round.rs  resident_support.rs  resident_support_lowering_tests.rs  succinct_query.rs  typed_program.rs  value_route.rs
triblespace-gpu/src/resident_proposals/: tests.rs  wired_tests.rs
triblespace-gpu/tests/: query_program_value_page.rs  resident_row_planner.rs  resident_support_estimates.rs  resident_transition.rs  value_route_entry.rs  wgpu_parity.rs
triblespace-macros-common/: Cargo.toml
triblespace-macros-common/src/: attributes.rs  find.rs  lib.rs  value_formatter.rs
triblespace-net/: CHANGELOG.md  Cargo.toml  README.md
triblespace-net/examples/: two_pile_sync_demo.rs
triblespace-net/src/: address_lookup.rs  cache.rs  channel.rs  clock.rs  handshake.rs  host.rs  identity.rs  lib.rs  peer.rs  policy.rs  protocol.rs  reconcile.rs  tracking.rs  transport.rs
triblespace-net/src/dht/: mod.rs
triblespace-net/src/transport/: iroh.rs  sim.rs
triblespace-net/tests/: auth_handshake_e2e.rs  convergence_props.rs  iroh_two_pile_sync.rs  sim_lazy.rs  sim_swarm.rs  sim_two_node.rs  timestamp_regression.rs  two_peer_convergence.rs
triblespace-net/tests/common/: mod.rs
triblespace-search/: CHANGELOG.md  Cargo.toml  README.md
triblespace-search/docs/: DESIGN.md  FACULTY_INTEGRATION.md  QUERY_ENGINE_INTEGRATION.md
triblespace-search/examples/: blob_sizes_at_scale.rs  bm25_merge_bench.rs  compose_bm25_and_pattern.rs  compose_hnsw_and_pattern.rs  faculty_wiki_search.rs  hybrid_search.rs  multi_term_bm25_search.rs  peak_build_memory.rs  phrase_search.rs  query_demo.rs  query_latency.rs  ring_vs_csr_hnsw.rs
triblespace-search/src/: bm25.rs  constraint.rs  hnsw.rs  index_bm25.rs  index_hnsw.rs  index_schema.rs  lib.rs  ring.rs  schemas.rs  succinct.rs  tokens.rs
triblespace-search/tests/: engine_integration.rs  find_macro.rs  pile_ondisk_roundtrip.rs  pile_roundtrip.rs  scale_smoke.rs
(+211 files in other folders)
