[package]
name = "triblespace"
version = "0.43.1"
authors = ["Jan Bramkamp <crest@rlwinm.de>", "⚫️ <jp@bultmann.eu>", "Vanja Sophie Cangalovic <vanja@bultmann.eu>"]
edition = "2021"
description = "The Triblespace: A lightweight knowledge base for rust."
homepage = "https://trible.space"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/triblespace"
repository = "https://github.com/triblespace/triblespace-rs"

[package.metadata.docs.rs]
# The `wasm` feature requires the `wasm32-unknown-unknown` Rust target at build time
# (the `#[value_formatter]` macro compiles formatter functions to wasm). Keep docs.rs
# builds lightweight and reliable by disabling default features and opting into
# `proptest` only.
no-default-features = true
features = ["proptest"]

[workspace]
members = [
    "triblespace-core",
    "triblespace-core-macros",
    "triblespace-macros",
    "triblespace-macros-common",
    "triblespace-net",
    "triblespace-search",
    "trible",
]
resolver = "2"

[dependencies]
triblespace-core = { version = "0.43.1", path = "./triblespace-core", default-features = false }
triblespace-macros = { version = "0.43.1", path = "./triblespace-macros" }
triblespace-net = { version = "0.43.1", path = "./triblespace-net", optional = true }
triblespace-search = { version = "0.43.1", path = "./triblespace-search", optional = true }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"], optional = true }
log = { version = "0.4.26", optional = true }
rand_core06 = { package = "rand_core", version = "0.6.4", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }
thread_local = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.6.0"
fake = "4.3.0"
im = "15.1.0"
rayon = "1.7"
tempfile = "3.15.0"
trybuild = "1.0.99"
proptest = "1.6.0"
rand = "0.8"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
anybytes = { version = "0.20.2", features = ["bytes", "zerocopy", "mmap"] }
memmap2 = "0.9.5"
url = "2.5.0"
serde_json = "1.0"
f256 = "0.7.0"
blake3 = "1.5"
oxigraph = "0.4.11"
oxrdf = "0.2.4"

[features]
default = ["triblespace-core/proptest", "wasm", "object-store", "parallel"]
proptest = ["triblespace-core/proptest"]
object-store = ["triblespace-core/object-store"]
kani = ["triblespace-core/kani"]
wasm = ["triblespace-core/wasm"]
telemetry = [
    "dep:ed25519-dalek",
    "dep:log",
    "dep:rand_core06",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:thread_local",
]
net = ["dep:triblespace-net"]
search = ["dep:triblespace-search"]
parallel = ["triblespace-core/parallel"]

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "patch"
harness = false

[[bench]]
name = "json_import"
harness = false

[[bench]]
name = "json_export"
harness = false

[[bench]]
name = "json_ld"
harness = false

[[bench]]
name = "dataset_vs_tribles"
harness = false

[[bench]]
name = "number_format"
harness = false

[[bench]]
name = "path_query"
harness = false
[profile.bench]
debug = true
opt-level = 3

[profile.release]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }

[package.metadata.kani.flags]
default-unwind = "1"

