[package]
name = "trible"
version = "0.43.1"
authors = ["⚫️ <jp@bultmann.eu>"]
edition = "2021"
description = "A knowledge graph and meta file system for object stores."
homepage = "https://tribles.space"
repository = "https://github.com/triblespace/trible"
license = "MIT"
readme = "README.md"
keywords = [
    "cli",
    "tribles",
    "knowledge-graph",
    "filesystem",
    "object-store",
]
categories = [
    "command-line-utilities",
    "filesystem",
    "database-implementations",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.57", features = ["derive", "env"] }
clap_complete = "4.5.65"
anyhow = "1.0.101"
getrandom = "0.4.1"
hex = "0.4.3"
memchr = "2.7.6"
triblespace = { version = "0.43.1", path = "..", default-features = false }
triblespace-core = { version = "0.43.1", path = "../triblespace-core", default-features = false, features = ["object-store"] }
file_type = "0.8"
chrono = "0.4"
object_store = { version = "0.13.1", default-features = false, features = ["aws", "fs"] }
futures = "0.3"
url = "2"
ed25519-dalek = "2.2.0"
hifitime = "4"
anybytes = { version = "0.20.2", features = ["zerocopy"] }
iroh-base = "0.98"
triblespace-net = { version = "0.43.1", path = "../triblespace-net" }
blake3 = "1.8"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
blake3 = "1.8.3"
