[package]
name = "triblespace-core"
version = "0.46.4"
authors = ["Jan Bramkamp <crest@rlwinm.de>", "⚫️ <jp@bultmann.eu>", "Vanja Sophie Cangalovic <vanja@bultmann.eu>"]
edition = "2021"
rust-version = "1.89"
description = "The triblespace core implementation."
homepage = "https://tribles.space"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/triblespace-core"
repository = "https://github.com/triblespace/triblespace-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.5"
json-event-parser = "0.2.2"
winnow = "0.7.13"
zerocopy = { version = "0.8", features = ["derive"] }
anybytes = { version = "0.20.2", features = ["bytes", "zerocopy", "winnow", "mmap"] }
rand = "0.8"
ux = "0.1.5"
siphasher = "1.0.1"
arbitrary = { version = "1", features = ["derive"] }
object_store = { version = "0.12.2", optional = true }
hex = "0.4.3"
hex-literal = "1.0.0"
base64 = "0.22"
url = { version = "2.5.0", optional = true }
ed25519 = "2.2.3"
ed25519-dalek = {version = "2.1.0", features = ["rand_core"]}
blake3 = "1.8.4"
futures = { version = "0.3.30", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
signature = "2.2.0"
bytes = "1.6.0"
serde_json = "1.0"
bytemuck = { version = "1.15.0", features = ["extern_crate_alloc"]}
proptest = { version = "1.6.0", optional = true }
hifitime = "4.1.2"
f256 = "0.7.0"
jerky = "0.9.0"
itertools = "0.14.0"
sptr = "0.3.2"
indxvec = "1.9.0"
ethnum = "1.5.0"
num-rational = "0.4.2"
arrayvec = "0.7.6"
smallvec = "1.13"
quick_cache = "0.6.9"
uuid = "1.15.1"
page_size = "0.6.0"
ryu = "1.0"
triblespace-core-macros = { version = "0.46.4", path = "../triblespace-core-macros" }
wasmi = { version = "0.31", optional = true }
rayon = { version = "1", optional = true }

[dev-dependencies]
fake = "4.3.0"
futures = "0.3"
rayon = "1.7"
tempfile = "3.15.0"
wat = "1"

[build-dependencies]
rustversion = "1.0"

[features]
default = ["proptest", "object-store", "parallel"]
proptest = ["dep:proptest"]
object-store = ["dep:object_store", "dep:tokio", "dep:futures", "dep:url"]
kani = []
hatch = []
# Variable-width trie ("HATCH") work-in-progress: a faithful clone of the
# tuned `patch` module (as `vwpatch`) that will be reworked into the
# variable-width design. Off by default; pure additive module.
vwpatch = []
# Deterministic id minting for simulation testing: enables
# `id::rngid::seed_ids` (thread-local seeded source consulted by
# rngid()/genid()). Zero cost when disabled — the production rngid
# path is compiled identically without this feature.
deterministic = []
wasm = ["dep:wasmi"]
parallel = ["dep:rayon"]

[[bench]]
name = "hatch"
harness = false
required-features = ["hatch"]

[[bench]]
name = "vwpatch"
harness = false
required-features = ["vwpatch"]

[[bench]]
name = "vwpatch_setops"
harness = false
required-features = ["vwpatch", "parallel"]

[[bench]]
name = "vwpatch_allorderings"
harness = false
required-features = ["vwpatch"]

[[bench]]
name = "vwpatch_realmem"
harness = false
required-features = ["vwpatch"]

[[bench]]
name = "union_vw_vs_patch"
harness = false
required-features = ["vwpatch", "parallel"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }

[package.metadata.kani.flags]
default-unwind = "1"

## Removed workspace.metadata to allow this crate to be used as a path dependency
## inside the surrounding workspace without creating nested workspace roots.
