[package]
name = "triblespace-gpu"
version = "0.47.0"
authors = ["⚫️ <jp@bultmann.eu>"]
edition = "2021"
rust-version = "1.92"
description = "Opt-in GPU acceleration backends for TribleSpace"
homepage = "https://trible.space"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/triblespace-gpu"
repository = "https://github.com/triblespace/triblespace-rs"
readme = "README.md"

[package.metadata.docs.rs]
no-default-features = true
features = ["wgpu", "cuda"]

[features]
default = []
wgpu = ["dep:cubecl", "cubecl/wgpu", "dep:jerky"]
cuda = ["dep:cubecl", "cubecl/cuda"]
# Experimental only: this enables CubeCL's MLIR/LLVM CPU runtime for the
# `cpu_runtime_probe` example. No production backend selects it.
cpu = ["dep:cubecl", "cubecl/cpu"]

[dependencies]
cubecl = { version = "=0.10.0", default-features = false, features = ["std"], optional = true }
jerky = { version = "0.9.0", git = "https://github.com/triblespace/jerky.git", rev = "37160b8aa0384caab390852fd7be55c6f7282509", default-features = false, features = ["gpu"], optional = true }
triblespace-core = { version = "0.47.0", path = "../triblespace-core", default-features = false }

[dev-dependencies]
rayon = "1.7"
triblespace-core = { version = "0.47.0", path = "../triblespace-core", default-features = false, features = ["parallel"] }

[[example]]
name = "archive_merge"
required-features = ["wgpu"]

[[example]]
name = "frontier_program"
required-features = ["wgpu"]

[[example]]
name = "cpu_runtime_probe"
required-features = ["cpu", "wgpu"]

[[test]]
name = "wgpu_parity"
required-features = ["wgpu"]
