[package]
name = "triblespace-gpu"
version = "0.47.0"
authors = ["⚫️ <jp@bultmann.eu>"]
edition = "2021"
rust-version = "1.92"
description = "Opt-in GPU acceleration backends for TribleSpace"
homepage = "https://trible.space"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/triblespace-gpu"
repository = "https://github.com/triblespace/triblespace-rs"
readme = "README.md"

[package.metadata.docs.rs]
no-default-features = true
features = ["wgpu", "cuda"]

[features]
default = ["wgpu"]
wgpu = ["dep:cubecl", "cubecl/wgpu", "dep:jerky", "dep:itertools"]
cuda = ["dep:cubecl", "cubecl/cuda"]

[dependencies]
cubecl = { version = "=0.10.0", default-features = false, features = ["std"], optional = true }
itertools = { version = "0.14.0", optional = true }
jerky = { version = "0.9.0", git = "https://github.com/triblespace/jerky.git", rev = "aeb3ba0817c4e481723c23eda696dc3beeacaf69", default-features = false, features = ["gpu"], optional = true }
triblespace-core = { version = "0.47.0", path = "../triblespace-core", default-features = false }

[dev-dependencies]
rayon = "1.7"
triblespace-core = { version = "0.47.0", path = "../triblespace-core", default-features = false, features = ["parallel"] }

[[example]]
name = "archive_merge"
required-features = ["wgpu"]

[[example]]
name = "frontier_program"
required-features = ["wgpu"]

[[example]]
name = "resident_transition"
required-features = ["wgpu"]

[[example]]
name = "resident_eav_chain"
required-features = ["wgpu"]

[[example]]
name = "resident_eav_shapes"
required-features = ["wgpu"]

[[test]]
name = "wgpu_parity"
required-features = ["wgpu"]

[[test]]
name = "resident_transition"
required-features = ["wgpu"]

[[test]]
name = "resident_row_planner"
required-features = ["wgpu"]

[[test]]
name = "resident_support_estimates"
required-features = ["wgpu"]

[[test]]
name = "query_program_value_page"
required-features = ["wgpu"]

[[test]]
name = "value_route_entry"
required-features = ["wgpu"]
