[package]
name = "triblespace-macros-common"
version = "0.12.2"
edition = "2021"
description = "Shared implementation helpers for triblespace procedural macros"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/triblespace-macros-common"
homepage = "https://trible.space"
repository = "https://github.com/triblespace/triblespace-rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
