[package]
name = "triblespace-net"
version = "0.43.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Distributed sync protocol for triblespace piles over iroh"
repository = "https://github.com/triblespace/triblespace-net"

[dependencies]
triblespace-core = { version = "0.43.0", path = "../triblespace-core", default-features = false }
iroh = { version = "0.98", features = ["platform-verifier"] }
iroh-base = "0.98"
iroh-blobs = { version = "0.100", default-features = false, features = ["rpc"] }
url = "2"
iroh-gossip = { version = "0.98", features = ["net"] }
irpc = "0.14.0"
irpc-iroh = "0.14.0"
anyhow = "1"
anybytes = { version = "0.20.2", features = ["zerocopy"] }
arrayvec = "0.7.6"
blake3 = "1.8"
ed25519-dalek = "2.2.0"
futures-buffered = "0.2.12"
getrandom = "0.4"
hex = "0.4"
indexmap = "2.10.0"
n0-future = "0.3.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.1"
snafu = "0.8.6"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
hifitime = "4.1.2"
# `test-utils` exposes `iroh::test_utils::test_transport::TestNetwork`,
# the in-memory simulated transport that lets two endpoints talk
# without DNS or relays. The mpsc-channel transport itself lives
# behind `unstable-custom-transports` because the custom-transport
# API isn't stable yet — we only depend on it for the auth-handshake
# e2e test, which is fine.
iroh = { version = "0.98", features = ["test-utils", "unstable-custom-transports"] }


