[package]
name = "triblespace-search"
version = "0.40.0"
edition = "2021"
# `std::thread::scope` (1.63) is the oldest non-trivial feature
# used; const assertions + zerocopy derive pull the actual
# requirement higher. 1.80 is the lowest stable we've verified.
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Content-addressed BM25 + HNSW indexes on top of triblespace piles."
authors = ["Jan-Paul Bultmann <jp@bultmann.eu>"]
homepage = "https://trible.space"
repository = "https://github.com/triblespace/triblespace-rs"
documentation = "https://docs.rs/triblespace-search"
readme = "README.md"
keywords = ["triblespace", "bm25", "hnsw", "search", "succinct"]
categories = ["data-structures", "text-processing"]
# Keep the crates.io tarball lean: tests + examples ship, but
# generated / cache-only artifacts don't.
exclude = ["target/", "Cargo.lock", ".git/"]

[dev-dependencies]
# tempfile — used by integration tests that exercise an on-disk
# triblespace Pile round-trip. Already in the tree via triblespace
# transitively; declaring it here keeps the tests building even
# if the transitive chain changes.
tempfile = "3"

[dependencies]
# Depend directly on `triblespace-core` rather than the umbrella
# `triblespace` crate. The macros come from `triblespace_core::macros::*`
# (re-exported from `triblespace-core-macros`), which emit
# `::triblespace_core::…` absolute paths — so no umbrella
# crate is needed in the dep graph. This avoids the
# feature-gated cycle that would block the umbrella from
# optionally re-exporting search at `triblespace::search`.
triblespace-core = { version = "0.40.0", path = "../triblespace-core", default-features = false }
anybytes = "0.20"
# jerky — succinct data structures; optional for the v1 scaffold,
# required once we flip from flat-array prototypes to the
# wavelet-matrix-backed blobs.
jerky = { version = "0.9", optional = true }
# zerocopy — safe byte<->struct conversion for serializing
# jerky's CompactVectorMeta into the succinct blob header. Pulled
# in along with jerky, so no added transitive cost.
zerocopy = { version = "0.8", features = ["derive"], optional = true }
# blake3 — for `hash_tokens` helper (callers hash their own tokens
# into 32-byte triblespace Values).
blake3 = "1"

[features]
default = ["succinct"]
# Swap the naive flat-array implementations for the succinct
# jerky-backed ones. On until we have both working; off lets us
# test the naive path in isolation.
succinct = ["dep:jerky", "dep:zerocopy"]

[package.metadata.docs.rs]
all-features = true
